--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<h1>Hello! c’est Abir Essaidi</h1>
+
+<p>
+Étudiante en finance en France, spécialisée en intelligence artificielle appliquée au business.<br />
+Je développe des projets à l’intersection de l’IA et du monde des affaires.<br />
+Intéressée par des stages et des collaborations.<br />
+Découvrez mes projets ci-dessous.
+</p>
+
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -226,4 +231,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
