ajout de la photo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
+						<div class="intro-avatar">
+							<img src="images/background.jpg.jpeg" alt="Photo de profil d'Abir Essaidi" />
+						</div>
 						<h1>Hello! c’est Abir Essaidi</h1>
 
 <p>
